amf-client/shared/src/test/resources/parser-results/error/invalid_media_type.raml
#%RAML 1.0
title: A
mediaType: applicationjson/